0.1.1
-----
1. Play/Pause track when middle click on tray iocn. (KDE only). Thanks to Piotr
   Wicijowski for the idea/patch.
2. Only connecto to QTreeView::activated when in single-click. Double-click already
   expands/collapses the item - so if we also do this on activated, then the item
   is re-collapsed/expanded.
3. Only create the tray icon once!

0.1.0
-----
[Changes from QtMPC]
1. Use XDG_CACHE_HOME to store XML and covers
2. Hide listview headers
3. Dir view -> Folders, Library view -> Library
4. Removed setting of font style and size - only bold now set
5. In library list, use album-artist (if available, artist otherwise) to group
   albums.
6. Remove search combo, and always default to searching in all fields.
7. Removed warning when add to playlist, and nothing selected - was inconsistent
   with playlist view. (Add to playlist actions should now only be enabled if
   there is something selected)
8. Fix call to setupGUI so as to not create a statusbar
9. If compiled with KDE support;
    - use KMessageBox
    - store config via KConfig
    - make app a KUniqueApplication, and
    - use KWallet to store password
10. Show cover on top-left
11. Fix blank item showing in playlist when playlist is empty
12. Hide password in preferences dialog
13. Only 2 socket connections to MPD - one for commands, and one for idle
    messages.
14. Only load data for a tab when the tab is selected.
15. If saving to a pre-existing playlist, ask the user if it is ok to overwrite.
    If so, delete the existing one first, then save.
16. Add a combo to filter on genre.
17. Check for cover (cover.png/jpg) within folder of current track to get
    cover-art, otherwise download.
18. Fetch lyrics
19. Also check mpdFolder+filename.lyrics for lyrics file
20. Use QNetworkAccessManager for HTTP downloads. If compiled woth KDE support,
    use KIO::Integration::AccessManager so that we can gain access to KDE's
    proxy settings.
21. Use sidebar instead of tabbar.