@@ -6,6 +6,7 @@
    expands/collapses the item - so if we also do this on activated, then the item
    is re-collapsed/expanded.
 3. Only create the tray icon once!
+4. Add context menu to toolbar buttons to enable using smaller buttons.
 
 0.1.0
 -----
